--- a/templates/estoque/home.html
+++ b/templates/estoque/home.html
@@ -11,9 +11,13 @@
             <h1>Execução</h1>
             <p>Escolha a ação desejada:</p>
             <div class="menu">
-                <a href="{% url 'estoque' %}"><button>Estoque</button></a><br>
-                <a href="{% url 'produto' %}"><button>Produto</button></a><br>
+                <a href="{% url 'estoque' %}"><button>Estoque</button></a>
+                <br>
+                <a href="{% url 'produto' %}"><button>Produto</button></a>
+                <br>
                 <a href="{% url 'pedido' %}"><button>Pedido</button></a>
+                <br>
+                <a href="{% url 'contato' %}"><button>Suporte</button></a>
             </div>
         </div>
     </body>
