--- a/templates/estoque/home.html
+++ b/templates/estoque/home.html
@@ -1,26 +1,20 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <title>Título da minha página</title>
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    </head>
-    <body>
-        <div class="caixa-branca">
-            <h1>Execução</h1>
-            <p>Escolha a ação desejada:</p>
-            {% if user.is_authenticated %}
-                <div class="menu">
-                    <a href="{% url 'estoque' %}"><button>Estoque</button></a>
-                    <a href="{% url 'produto' %}"><button>Produto</button></a>
-                    <a href="{% url 'pedido' %}"><button>Pedido</button></a>
-                    <a href="{% url 'contato' %}"><button>Suporte</button></a>
-                </div>
-            {% else %}
-                <p>Você precisa <a href="{% url 'login' %}">fazer login</a> para acessar o sistema.</p>
-            {% endif %}
-        </div>
-    </body>
-</html>
+{% extends 'estoque/base.html' %}
+{% block title %}Estoque{% endblock %}
 
+{% block content %}
+<div class="home-container">
+    <div class="card-home">
+        <h1>Execução</h1>
+        <p>Escolha a ação desejada:</p>
+
+        <div class="home-buttons">
+            <a href="{% url 'estoque' %}" class="btn btn-primary">Estoque</a>
+            <a href="{% url 'produto' %}" class="btn btn-primary">Produto</a>
+            <a href="{% url 'pedido' %}" class="btn btn-primary">Pedido</a>
+            <a href="{% url 'contato' %}" class="btn btn-primary">Suporte</a>
+        </div>
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+{% endblock %}
