--- a/templates/estoque/login.html
+++ b/templates/estoque/login.html
@@ -1,28 +1,23 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <title>Título da minha página</title>
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    </head>
-    <body>
-        <div class="caixa-branca">
-            <div class="menu">
-                {% if form.errors %}
-                <p>Usuário ou senha inválidos.</p>
-                {% endif %}
-                <form method="post">
-                    {% csrf_token %}
-                    <label for="id_username">Usuário:</label>
-                    {{ form.username }}
-                    <br>
-                    <label for="id_password">Senha:</label>
-                    {{ form.password }}
-                    <br>
-                    <button type="submit">Entrar</button>
-                </form>
-            </div>
-        </div>
-    </body>
-</html>
+{% extends 'estoque/base.html' %}
+{% block title %}Estoque{% endblock %}
+
+{% block content %}
+<div class="caixa-branca">
+    <div class="menu">
+        {% if form.errors %}
+        <p>Usuário ou senha inválidos.</p>
+        {% endif %}
+        <form method="post">
+            {% csrf_token %}
+            <label for="id_username">Usuário:</label>
+            {{ form.username }}
+            <br>
+            <label for="id_password">Senha:</label>
+            {{ form.password }}
+            <br>
+            <button type="submit">Entrar</button>
+        </form>
+    </div>
+</div>
+
+{% endblock %}
